--- a/styles/main.css
+++ b/styles/main.css
@@ -194,7 +194,7 @@ H2 {
 @media (min-width:40em) {
     .jumbotron {
         background: url("../images/brand_hero.png") no-repeat; 
-        background-color: #86ceef;
+        background-color: #85d0ee;
 
         background-position: right;  
     }
